--- a/src/assets/styles/pages/layouts/Hero.css
+++ b/src/assets/styles/pages/layouts/Hero.css
@@ -86,6 +86,6 @@ font-style: normal;
   .hero-heading {
     position: relative;
     font-size: 5.5rem;
-    margin-left: -8%;
+    margin-left: -3%;
   }
 }
